# Isha-AI-

./: .gitignore  CMakeLists.txt  build_and_run.ps1  build_llama.ps1  isha ai.md  rules.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  isha_jni.cpp
android/app/src/main/java/com/isha/ai/: IshaDatabase.kt  IshaDocumentParser.kt  IshaMemoryPressureListener.kt  IshaRAGManager.kt  IshaRuntime.kt  IshaThermalService.kt  (+2 more)
android/app/src/main/res/layout/: activity_main.xml  activity_recovery.xml
benchmarks/: advanced_llm_stress_benchmark.cpp  android_lmk_chaos_benchmark.cpp  android_profile_benchmark.cpp  apk_size_budget_policy_benchmark.cpp  apk_size_governance_benchmark.cpp  apk_update_migration_validation_benchmark.cpp  background_checkpoint_priority_benchmark.cpp  background_resume_latency_benchmark.cpp  battery_lifetime_observer_benchmark.cpp  camera_lifecycle_benchmark.cpp  compute_buffer_profiling_benchmark.cpp  consumer_expectation_policy_benchmark.cpp  context_budget_benchmark.cpp  deployment_health_summary_benchmark.cpp  device_memory_collapse_benchmark.cpp  device_thermal_ceiling_benchmark.cpp  download_1_5b_model.cpp  download_interruption_chaos_benchmark.cpp  dual_model_tokenizer_benchmark.cpp  efficiency_decay_curve_benchmark.cpp  first_run_experience_policy_benchmark.cpp  first_token_consistency_benchmark.cpp  first_week_retention_validation_benchmark.cpp  frame_pressure_benchmark.cpp  hard_recovery_mode_benchmark.cpp  image_ingestion_benchmark.cpp  inference_benchmark.cpp  inference_stress_benchmark.cpp  install_failure_recovery_benchmark.cpp  install_time_device_profiler_benchmark.cpp  install_update_recovery_benchmark.cpp  interruption_resilience_policy_benchmark.cpp  ios_coreml_manager_benchmark.cpp  kv_cache_benchmark.cpp  llm_1_5b_integration_benchmark.cpp  llm_integration_benchmark.cpp  llm_lifecycle_benchmark.cpp  lmk_integrity_benchmark.cpp  load_benchmark.cpp  memory_benchmark.cpp  (+56 more)
core/cognition/: context_governor.cpp  context_governor.hpp  grounded_pipeline.cpp  grounded_pipeline.hpp
core/config/: device_profile.hpp  resource_limits.hpp  runtime_config.hpp
core/embeddings/: embedding_engine.cpp  embedding_engine.hpp  embedding_interface.hpp  embedding_stub.cpp
core/inference/: acceleration_backend.hpp  acceleration_probe.cpp  acceleration_probe.hpp  acceleration_quarantine.hpp  cancellation_token.hpp  capability_matrix.hpp  decode_governor.cpp  decode_governor.hpp  drift_tracker.hpp  driver_tracker.hpp  gguf_inference_engine.cpp  gguf_inference_engine.hpp  gguf_loader.cpp  gguf_loader.hpp  inference_context.hpp  inference_engine.hpp  inference_thread_policy.hpp  ios_coreml_manager.cpp  ios_coreml_manager.hpp  kv_cache_manager.cpp  kv_cache_manager.hpp  kv_telemetry.hpp  latency_tracker.cpp  latency_tracker.hpp  llama_cpp_engine.cpp  llama_cpp_engine.hpp  mmap_manager.cpp  mmap_manager.hpp  nnapi_backend.cpp  nnapi_backend.hpp  output_sanitizer.cpp  output_sanitizer.hpp  sampling_config.hpp  token_streamer.cpp  token_streamer.hpp
core/ingestion/: chunker.cpp  chunker.hpp  ingestion_pipeline.cpp  ingestion_pipeline.hpp
core/logging/: logger.cpp  logger.hpp
core/model/: download_manager.cpp  download_manager.hpp  memory_guard.cpp  memory_guard.hpp  model_lifecycle_controller.cpp  model_lifecycle_controller.hpp  model_manager.cpp  model_manager.hpp  model_registry.cpp  model_registry.hpp  tokenizer_manager.cpp  tokenizer_manager.hpp
core/monitoring/: android_monitor.cpp  resource_monitor.hpp  windows_monitor.cpp
core/multimodal/: image_context.cpp  image_context.hpp  image_decoder.cpp  image_decoder.hpp  image_pipeline.cpp  image_pipeline.hpp  multimodal_context_governor.cpp  multimodal_context_governor.hpp
core/observability/: profiling_snapshot.hpp  telemetry.cpp  telemetry.hpp
core/ocr/: ocr_engine.cpp  ocr_engine.hpp
core/retrieval/: local_index.cpp  local_index.hpp  retrieval_engine.cpp  retrieval_engine.hpp  retrieval_interface.hpp  retrieval_stub.cpp
core/runtime/: event_bus.cpp  event_bus.hpp  lock_hierarchy.hpp  runtime.cpp  runtime.hpp
core/scheduler/: inference_scheduler.cpp  inference_scheduler.hpp
core/session/: session_manager.cpp  session_manager.hpp
core/survival/: apk_update_migration_validation.cpp  apk_update_migration_validation.hpp  atomic_model_extraction.cpp  atomic_model_extraction.hpp  background_checkpoint_priority.cpp  background_checkpoint_priority.hpp  background_resume_latency_policy.cpp  background_resume_latency_policy.hpp  background_survival_manager.cpp  background_survival_manager.hpp  battery_floor_policy.cpp  battery_floor_policy.hpp  battery_lifetime_observer.cpp  battery_lifetime_observer.hpp  cache_quarantine_manager.cpp  cache_quarantine_manager.hpp  deployment_health_summary.cpp  deployment_health_summary.hpp  device_certification_matrix.cpp  device_certification_matrix.hpp  device_thermal_ceiling_policy.cpp  device_thermal_ceiling_policy.hpp  dynamic_degradation_ladder.cpp  dynamic_degradation_ladder.hpp  field_failure_escalation.cpp  field_failure_escalation.hpp  first_token_consistency_policy.cpp  first_token_consistency_policy.hpp  first_week_retention_validation.cpp  first_week_retention_validation.hpp  foreground_service_policy.cpp  foreground_service_policy.hpp  hard_recovery_mode.cpp  hard_recovery_mode.hpp  install_failure_recovery.cpp  install_failure_recovery.hpp  install_recovery_manager.cpp  install_recovery_manager.hpp  install_time_device_profiler.cpp  install_time_device_profiler.hpp  (+48 more)
core/vision/: camera_session_manager.cpp  camera_session_manager.hpp  frame_governor.cpp  frame_governor.hpp  vision_engine.cpp  vision_engine.hpp
core/voice/: audio_buffer_manager.cpp  audio_buffer_manager.hpp  audio_session_manager.cpp  audio_session_manager.hpp  audio_types.hpp  stt_engine.cpp  stt_engine.hpp  tts_engine.cpp  tts_engine.hpp  voice_orchestrator.cpp  voice_orchestrator.hpp
core/watchdog/: runtime_watchdog.cpp  runtime_watchdog.hpp
